Added list of companies feature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <h1>{{title}}</h1>
-<div class="mat-app-background basic-container">
-  <app-menu></app-menu>
-</div>
+<app-companies></app-companies>
+
 
