--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,10 +1,11 @@
-<button mat-button [matMenuTriggerFor]="companies">Companies</button>
-<mat-menu #companies="matMenu">
-  <button mat-menu-item>Prada</button>
-  <button mat-menu-item>Burberry</button>
-</mat-menu>
+<button mat-button>Companies</button>
 
-<button mat-button [matMenuTriggerFor]="options">Options</button>
+<button mat-button>Input</button>
+
+<button id="more" mat-icon-button [matMenuTriggerFor]="options">
+  <mat-icon>more_vert</mat-icon>
+</button>
+
 <mat-menu #options="matMenu">
   <button mat-menu-item>My Account</button>
   <button mat-menu-item>Log Out</button>
