--- a/src/app/companies/companies.component.html
+++ b/src/app/companies/companies.component.html
@@ -1,14 +1,9 @@
 <h2>My Companies</h2>
 <ul class="companies">
-    <li *ngFor="let company of companies" (click)="onSelect(company)">
+    <li *ngFor="let company of companies" 
+        (click)="onSelect(company)"
+        [class.selected]="company === selectedCompany">
         <span class="badge">{{company.id}}</span> {{company.name}} {{company.sales}}
     </li>
 </ul>
-<h2>{{selectedCompay.name | uppercase}} Details</h2>
-<div><span>id: </span>{{selectedCompany.id}}</div>
-<div><span>name: </span>{{selectedCompany.name}}</div>
-<div>
-  <label>sales:
-    <input [(ngModel)]="selectedCompany.sales" placeholder="$0"/>
-  </label>
-</div>
+<app-company-detail [company]="selectedCompany"></app-company-detail>
