--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <h1>{{title}}</h1>
-<app-companies></app-companies>
+<nav>
+  <a routerLink="/dashboard">Dashboard</a>
+  <a routerLink="/companies">Companies</a>
+</nav>
+<router-outlet></router-outlet>
 <app-messages></app-messages>
 
 
