--- a/src/app/companies/companies.component.html
+++ b/src/app/companies/companies.component.html
@@ -1,4 +1,13 @@
 <h2>My Companies</h2>
+<div>
+    <label>
+        <input #companyName/>
+    </label>
+    <!--(click) passes input value to add() and then clears the input-->
+    <button (click)="add(companyName.value); companyName.value=''">
+        Add
+    </button>
+</div>
 <ul class="companies">
     <li *ngFor="let company of companies">
         <a routerLink="/detail/{{company.id}}">
