--- a/src/app/company-detail/company-detail.component.html
+++ b/src/app/company-detail/company-detail.component.html
@@ -2,6 +2,7 @@
     <h2>{{company.name | uppercase}} Details</h2>
     <div><span>id: </span>{{company.id}}</div>
     <div><span>name: </span>{{company.name}}</div>
+    <div><span>sales: </span>{{company.sales}}</div>
     <div>
         <label>sales:
         <input [(ngModel)]="company.sales" placeholder="$0"/>
@@ -9,3 +10,4 @@
     </div>
 </div>
 <button (click)="goBack()">Back</button>
+<button (click)="save()">Save</button>
